# MAS-ROS2-CrewAI

./: .gitignore  README.md  build.sh  environment.yaml  run_bia.sh  run_cia.sh  run_via.sh
install/: local_setup.sh  setup.sh
install/bi_agent_package/lib/bi_agent_package/: bi_agent_node
install/bi_agent_package/share/bi_agent_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/ci_agent_package/lib/ci_agent_package/: ci_agent_node
install/ci_agent_package/share/ci_agent_package/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: main.py
src/bi_agent_package/: package.xml  setup.cfg  setup.py
src/bi_agent_package/bi_agent_package/: bi_agent.py  bi_agent_node.py
src/bi_agent_package/bi_agent_package/tools/: fetch_nav_tool.py
src/ci_agent_package/: package.xml  setup.cfg  setup.py
src/ci_agent_package/ci_agent_package/: ci_agent.py  ci_agent_node.py
src/common_interfaces/: CMakeLists.txt  package.xml
src/common_interfaces/src/: campus_vis.py  graph_manager.py  logger_config.py  test_manager.py  update_json.py
src/data/: building_info.json  campus_info.json  positions.json
src/multi_agent_launch_package/: package.xml  setup.cfg  setup.py
src/multi_agent_launch_package/launch/: multi_agent_launch.py
src/tools/: nav_back_to_entrance_tool.py  nav_to_building_tool.py  nav_to_host_tool.py  req_building_nav_tool.py
src/visitor_agent_package/: package.xml  setup.cfg  setup.py
src/visitor_agent_package/visitor_agent_package/: vi_agent.py  vi_agent_node.py
(+6 files in other folders)
